--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -1,4 +1,3 @@
-<!-- core/templates/core/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,24 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tutoring Services{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block extra_head %}
-    {% endblock %}
+    {% block extra_head %}{% endblock %}
 </head>
-<body class="{% block body_class %}{% endblock %}">
-    <nav>
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'course_list' %}">Courses</a></li>
-            <li><a href="{% url 'book_session' %}">Book a Session</a></li>
-            <li><a href="{% url 'reviews' %}">Reviews</a></li>
-        </ul>
+<body>
+    <nav class="navbar navbar-expand-lg background-color-navbar bg-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">Tutoring Services</a>
+            <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span> open</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'course_list' %}">Courses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'book_session' %}">Book a Session</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'reviews' %}">Reviews</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <div class="content">
-        {% block content %}
-        {% endblock %}
+    <div class="container my-5" style="padding-top: 80px;">
+        {% block content %}{% endblock %}
     </div>
-    {% block extra_js %}
-    {% endblock %}
+    <footer class="bg-dark text-white mt-auto py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>Age Range</h5>
+                    <ul class="list-unstyled">
+                        <li>Key Stage 1: 5-7 years</li>
+                        <li>Key Stage 2: 7-11 years</li>
+                        <li>Key Stage 3: 11-14 years</li>
+                        <li>GCSE: 14-16 years</li>
+                        <li>A-Level: 16-18 years</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Subjects</h5>
+                    <ul class="list-unstyled">
+                        <li>Mathematics</li>
+                        <li>Chemistry</li>
+                        <li>Physics</li>
+                        <li>Further Mathematics</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>UK Examiners</h5>
+                    <ul class="list-unstyled">
+                        <li>AQA</li>
+                        <li>Edexcel</li>
+                        <li>OCR</li>
+                        <li>WJEC</li>
+                        <li>CCEA</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="text-center mt-3">
+                &copy; 2024 Tutoring Services. All Rights Reserved.
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
