--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'reviews' %}">Reviews</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'store' %}">Store</a>
+                    </li>
                 </ul>
             </div>
         </div>
