--- a/tutoring/core/templates/core/store.html
+++ b/tutoring/core/templates/core/store.html
@@ -22,7 +22,7 @@
     <h3>{{ product.name }}</h3>
     <p>{{ product.description }}</p>
     <p>Price: £{{ product.price }}</p>
-    <img :src="'/media/' + product.image" alt="Vue Image">
+    <img :src="product.image" alt="Vue Image">
   </div>
 </div>
 
