--- a/tutoring/core/templates/core/event_detail.html
+++ b/tutoring/core/templates/core/event_detail.html
@@ -1,18 +1,7 @@
-<!-- event_detail.html -->
-{% extends 'core/base.html' %}
-
+{% extends "core/base.html" %}
 {% block content %}
-<div class="container mt-5">
-    <h1>Event Details</h1>
-    <h2>{{ event.title }}</h2>
-    <p>Start: {{ event.start }}</p>
-    <p>End: {{ event.end }}</p>
-    <h3>Occurrences</h3>
-    <ul>
-        {% for occurrence in occurrences %}
-            <li>{{ occurrence.start }} - {{ occurrence.end }}</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'book_session' %}" class="btn btn-primary">Back to Booking</a>
-</div>
+<h1>{{ event.title }}</h1>
+<p>{{ event.description }}</p>
+<p>Start Time: {{ event.start_time }}</p>
+<p>End Time: {{ event.end_time }}</p>
 {% endblock %}
