--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -67,8 +67,9 @@
                         <a class="nav-link color-secondary" href="{% url 'live_stream_list' %}">Live Streams</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link color-secondary" href="{% url 'available_hours_list' %}">1 TO 1</a>
+                        <a class="nav-link" href="{% url 'available_hours_list' %}">Available Hours</a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link color-secondary" href="{% url 'reviews' %}">Reviews</a>
                     </li>
