--- a/tutoring/core/templates/core/available_hour_detail.html
+++ b/tutoring/core/templates/core/available_hour_detail.html
@@ -1,14 +1,15 @@
 {% extends "core/base.html" %}
 
-{% block title %}Available Hours on {{ date }}{% endblock %}
+{% block title %}Available Hours on {{ date|date:"l, d F Y" }}{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="mb-4">Available Hours on {{ date }}</h1>
+    <h1 class="mb-4">Available Hours on {{ date|date:"l, d F Y" }}</h1>
     <div class="list-group">
         {% for hour in available_hours %}
             <div class="list-group-item">
                 <p><strong>Time:</strong> {{ hour.start_time }} - {{ hour.end_time }}</p>
+                <p><strong>Cost:</strong> ${{ hour.cost }}</p>
                 {% if hour.is_available %}
                     <a href="{% url 'book_available_hour' hour.id %}" class="btn btn-success">Book Now</a>
                 {% else %}
