--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -140,6 +140,23 @@
                         <a class="nav-link" href="{% url 'store' %}">Store</a>
                     </li>
                 </ul>
+ <ul class="navbar-nav ms-auto mt-lg-3 mt-xl-0">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Logout</a>
+                        <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
+                            {% csrf_token %}
+                        </form>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Signup</a>
+                    </li>
+                {% endif %}
+            </ul>
             </div>
         </div>
     </nav>
@@ -178,6 +195,8 @@
                         <li>CCEA</li>
                     </ul>
                 </div>
+    <a href="https://www.northwalestutoring.com/privacy-policy">Privacy Policy</a>
+    <a href="https://www.northwalestutoring.com/terms-of-service">Terms of Service</a>
             </div>
             <div class="text-center mt-3">
 <a href="https://cleandesignuk.com/" target="_blank" class="btn btn-custom">Website by Clean Design UK</a>
