--- a/tutoring/core/templates/core/home.html
+++ b/tutoring/core/templates/core/home.html
@@ -13,7 +13,7 @@
 
     <section id="about" class="my-5">
         <h2>About North Wales Tutoring</h2>
-        <p>With a decade of experience, North Wales Tutoring offers specialized educational services designed to elevate student performance in key academic areas. From Wrexham to Bangor, we cover all major locales, ensuring your educational needs are met with expertise and care.</p>
+        <p>With a decade of experience, North Wales Tutoring offers specialised educational services designed to elevate student performance in key academic areas. From Wrexham to Bangor, we cover all major locales, ensuring your educational needs are met with expertise and care.</p>
     </section>
 
     <section id="services" class="my-5">
